--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: default
 {% include hero.html %}
 
 <div class="container">
+<div id="tlkio" data-channel="Dualeone-community" data-theme="theme--day" style="width:100%;height:100%;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
   <div class="row">
     <div class="col col-12">
       <div class="container__inner">
