--- a/_pages/chat.html
+++ b/_pages/chat.html
@@ -4,4 +4,4 @@ title: Chat
 permalink: /chat/
 ---
 
-<div id="tlkio" data-channel="Dualeone-community" data-theme="theme--day" style="width:100%;height:800px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
+<div id="tlkio" data-channel="Dualeone-community" data-theme="theme--night" style="width:100%;height:800px;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
